# metrics-engine--dp-worker

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_local.sh
.github/workflows/: ci.yml  deploy-ecs.yml
docs/: DATA_FLOW.md  EVENT_CONTRACTS.md  FLOW_DIAGRAM.md
ecs/: README.md  service-definition.json  task-definition.json
metrics_worker/: __init__.py
metrics_worker/application/dto/: catalog.py  events.py
metrics_worker/application/services/: expression_eval.py  planner.py  window_ops.py
metrics_worker/application/use_cases/: build_output_manifest.py  handle_run_request.py  publish_completed.py  publish_heartbeat.py  publish_started.py  validate_output_manifest.py
metrics_worker/domain/: entities.py  enums.py  errors.py  ports.py  types.py
metrics_worker/infrastructure/: __init__.py
metrics_worker/infrastructure/aws/: __init__.py  s3_io.py  s3_path.py  sns_publisher.py  sqs_consumer.py
metrics_worker/infrastructure/config/: settings.py
metrics_worker/infrastructure/io/: __init__.py  jsonl_writer.py  parquet_reader.py  parquet_writer.py
metrics_worker/infrastructure/observability/: __init__.py  logging.py  metrics.py
metrics_worker/infrastructure/runtime/: __init__.py  catalog_adapter.py  clock.py  health.py  main.py
metrics_worker/interfaces/runners/: __init__.py  sqs_run_worker.py
tests/integration/: test_parquet_io.py
tests/unit/: test_build_output_manifest.py  test_catalog_adapter.py  test_clock.py  test_event_parsing.py  test_expression_eval.py  test_handle_run_request.py  test_parquet_reader.py  test_planner.py  test_publish_use_cases.py  test_s3_io.py  test_s3_path.py  test_validate_output_manifest.py  test_window_ops.py
